--- a/custom_components/bluetti_bt/translations/en.json
+++ b/custom_components/bluetti_bt/translations/en.json
@@ -3,7 +3,9 @@
     "step": {
       "init": {
         "data": {
-          "use_controls": "Use controls (use at own risk)"
+          "use_controls": "Use controls (use at own risk)",
+          "persistant_conn": "Persistant connection",
+          "polling_interval": "Polling interval"
         }
       }
     }
