--- a/custom_components/bluetti_bt/translations/en.json
+++ b/custom_components/bluetti_bt/translations/en.json
@@ -5,7 +5,7 @@
         "data": {
           "use_controls": "Use controls (use at own risk)",
           "persistant_conn": "Persistant connection",
-          "polling_interval": "Polling interval"
+          "polling_interval": "Polling interval in seconds (restart required)"
         }
       }
     }
