--- a/custom_components/bluetti_bt/translations/de.json
+++ b/custom_components/bluetti_bt/translations/de.json
@@ -4,10 +4,13 @@
       "init": {
         "data": {
           "use_controls": "Steuerung aktivieren (auf eigenes Risiko)",
-          "persistant_conn": "Dauerhafte Verbindung",
+          "persistant_conn": "Dauerhafte Verbindung (Neustart erforderlich)",
           "polling_interval": "Datenabruf-Intervall in Sekunden (Neustart erforderlich)"
         }
       }
+    },
+    "abort": {
+      "invalid_interval": "Ungültiger Datenabruf-Intervall. Verwende 5 Sekunden oder mehr"
     }
   }
 }
