added dropdown to select device model

--- a/custom_components/bluetti_bt/translations/de.json
+++ b/custom_components/bluetti_bt/translations/de.json
@@ -1,4 +1,14 @@
 {
+  "config": {
+    "step": {
+      "user": {
+        "data": {
+          "address": "Gerät",
+          "type": "Modell (erforderlich bei PBOX Geräten)"
+        }
+      }
+    }
+  },
   "options": {
     "step": {
       "init": {
