--- a/custom_components/bluetti_bt/translations/en.json
+++ b/custom_components/bluetti_bt/translations/en.json
@@ -1,4 +1,14 @@
 {
+  "config": {
+    "step": {
+      "user": {
+        "data": {
+          "address": "Device",
+          "type": "Model (required for PBOX devices)"
+        }
+      }
+    }
+  },
   "options": {
     "step": {
       "init": {
