--- a/custom_components/bluetti_bt/translations/en.json
+++ b/custom_components/bluetti_bt/translations/en.json
@@ -17,7 +17,8 @@
           "persistent_conn": "Persistent connection (restart required)",
           "polling_interval": "Polling interval in seconds (restart required)",
           "polling_timeout": "Polling timeout in seconds (restart required)",
-          "max_retries": "Maximum amount of connection retries (restart required)"
+          "max_retries": "Maximum amount of connection retries (restart required)",
+          "use_encryption": "Encrypted connection (necessary for latest firmware versions)"
         }
       }
     },
