--- a/custom_components/bluetti_bt/translations/pt.json
+++ b/custom_components/bluetti_bt/translations/pt.json
@@ -14,6 +14,9 @@
   },
   "entity": {
     "sensor": {
+      "ac_input_current": {
+        "name": "AC Input Current"
+      },
       "ac_input_frequency": {
         "name": "AC Input Frequency"
       },
@@ -32,8 +35,14 @@
       "ac_output_on": {
         "name": "AC Output eingeschaltet"
       },
+      "ac_output_current": {
+        "name": "AC Output Current"
+      },
       "ac_output_power": {
         "name": "AC Output Power"
+      },
+      "ac_output_voltage": {
+        "name": "AC Output Voltage"
       },
       "ac_p1_current": {
         "name": "AC Phase 1 Current"
@@ -65,8 +74,14 @@
       "total_battery_percent": {
         "name": "Battery SOC"
       },
+      "dc_input_current": {
+        "name": "DC Input Current"
+      },
       "dc_input_power": {
         "name": "DC Input Power"
+      },
+      "dc_input_voltage": {
+        "name": "DC Input Voltage"
       },
       "dc_output_on": {
         "name": "DC Output on"
@@ -186,6 +201,9 @@
       },
       "ctrl_dc": {
         "name": "DC Output"
+      },
+      "ctrl_eco": {
+        "name": "ECO Mode"
       },
       "ctrl_led_mode": {
         "name": "LED Mode"
