added time_remaining field

--- a/custom_components/bluetti_bt/translations/en.json
+++ b/custom_components/bluetti_bt/translations/en.json
@@ -205,6 +205,9 @@
       },
       "sm_p3_voltage": {
         "name": "Smartmeter Phase 3 Voltage"
+      },
+      "time_remaining": {
+        "name": "Time Remaining"
       }
     },
     "switch": {
