--- a/custom_components/bluetti_bt/translations/de.json
+++ b/custom_components/bluetti_bt/translations/de.json
@@ -205,6 +205,9 @@
       },
       "sm_p3_voltage": {
         "name": "Smartmeter Phase 3 Spannung"
+      },
+      "time_remaining": {
+        "name": "Verbleibende Zeit"
       }
     },
     "switch": {
