--- a/custom_components/bluetti_bt/translations/en.json
+++ b/custom_components/bluetti_bt/translations/en.json
@@ -214,6 +214,12 @@
       },
       "time_remaining": {
         "name": "Time Remaining"
+      },
+      "version_arm": {
+        "name": "ARM Version"
+      },
+      "version_dsp": {
+        "name": "DSP Version"
       }
     },
     "switch": {
