--- a/custom_components/bluetti_bt/translations/en.json
+++ b/custom_components/bluetti_bt/translations/en.json
@@ -250,6 +250,30 @@
       },
       "version_dsp": {
         "name": "DSP Version"
+      },
+      "pack_1_voltage": {
+        "name": "Pack 1 Voltage"
+      },
+      "pack_2_voltage": {
+        "name": "Pack 2 Voltage"
+      },
+      "pack_3_voltage": {
+        "name": "Pack 3 Voltage"
+      },
+      "pack_4_voltage": {
+        "name": "Pack 4 Voltage"
+      },
+      "pack_1_battery_soc": {
+        "name": "Pack 1 SOC"
+      },
+      "pack_2_battery_soc": {
+        "name": "Pack 2 SOC"
+      },
+      "pack_3_battery_soc": {
+        "name": "Pack 3 SOC"
+      },
+      "pack_4_battery_soc": {
+        "name": "Pack 4 SOC"
       }
     },
     "switch": {
